--- a/client/package.json
+++ b/client/package.json
@@ -28,73 +28,62 @@
   "homepage": "https://github.com/TaitoUnited/server-template#readme",
   "_comment": "TODO remove unused dependencies",
   "dependencies": {
-    "axios": "^0.15.3",
-    "babel-polyfill": "^6.13.0",
-    "color": "^1.0.3",
-    "immutability-helper": "^2.1.1",
-    "isomorphic-fetch": "^2.2.1",
-    "jwt-decode": "^2.2.0",
-    "moment": "^2.17.1",
-    "qs": "^6.3.1",
-    "raven-js": "^3.15.0",
-    "react": "^15.5.4",
-    "react-components-kit": "^1.0.0",
-    "react-dom": "^15.5.4",
-    "react-dropzone": "^3.9.1",
-    "react-file-download": "^0.3.2",
-    "react-infinite": "^0.10.0",
-    "react-loadable": "^3.3.1",
-    "react-redux": "^4.4.6",
-    "react-router-dom": "^4.1.1",
-    "redux": "^3.6.0",
-    "redux-actions": "^2.0.3",
-    "redux-logger": "^2.7.4",
-    "redux-saga": "^0.11.1",
-    "socket.io-client": "^1.7.2",
-    "styled-components": "^1.4.0"
+    "axios": "^0.16.2",
+    "babel-polyfill": "^6.26.0",
+    "color": "^2.0.0",
+    "immutability-helper": "^2.4.0",
+    "js-cookie": "^2.1.4",
+    "prop-types": "^15.6.0",
+    "qs": "^6.5.0",
+    "raven-js": "^3.18.1",
+    "react": "^16.0.0",
+    "react-components-kit": "^4.1.0",
+    "react-dom": "^16.0.0",
+    "react-loadable": "^5.2.2",
+    "react-redux": "^5.0.6",
+    "react-router-dom": "^4.2.2",
+    "redux": "^3.7.2",
+    "redux-actions": "^2.2.1",
+    "redux-saga": "^0.15.6",
+    "styled-components": "^2.2.1"
   },
+  "_TODO": "use babel-preset-env!!!",
   "devDependencies": {
-    "autoprefixer": "^6.3.6",
-    "babel-cli": "^6.24.1",
-    "babel-core": "^6.24.1",
+    "babel-cli": "^6.26.0",
+    "babel-core": "^6.26.0",
     "babel-eslint": "^7.2.3",
-    "babel-jest": "^20.0.0",
-    "babel-loader": "^7.0.0",
-    "babel-plugin-lodash": "^3.2.11",
-    "babel-plugin-react-transform": "^2.0.2",
+    "babel-jest": "^21.0.2",
+    "babel-loader": "^7.1.2",
+    "babel-plugin-react-transform": "^3.0.0",
     "babel-plugin-syntax-dynamic-import": "^6.18.0",
-    "babel-polyfill": "^6.23.0",
     "babel-preset-es2015": "^6.24.1",
-    "babel-preset-es2015-native-modules": "^6.9.2",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
-    "css-loader": "^0.28.1",
-    "eslint": "^3.4.0",
-    "eslint-config-airbnb": "^10.0.1",
-    "eslint-loader": "^1.7.1",
+    "css-loader": "^0.28.7",
+    "eslint": "3.19.0",
+    "eslint-config-airbnb": "14.1.0",
+    "eslint-config-airbnb-base": "11.1.2",
+    "eslint-config-prettier": "^2.3.0",
+    "eslint-loader": "^1.9.0",
     "eslint-plugin-babel": "^4.1.1",
-    "eslint-plugin-import": "^1.10.0",
-    "eslint-plugin-jsx-a11y": "^2.1.0",
+    "eslint-plugin-import": "2.2.0",
+    "eslint-plugin-jsx-a11y": "4.0.0",
+    "eslint-plugin-prettier": "^2.1.2",
     "eslint-plugin-react": "^7.0.0",
-    "extract-text-webpack-plugin": "^2.1.0",
-    "file-loader": "^0.11.1",
-    "html-webpack-plugin": "^2.22.0",
-    "jest": "^20.0.0",
-    "json-loader": "^0.5.4",
-    "lodash-webpack-plugin": "^0.11.3",
-    "node-sass": "^4.1.1",
-    "postcss-loader": "^2.0.5",
-    "react-hot-loader": "^3.0.0-beta.7",
-    "react-transform-catch-errors": "^1.0.2",
-    "redbox-react": "^1.3.6",
-    "redux-devtools": "^3.3.1",
-    "redux-devtools-dock-monitor": "^1.1.1",
-    "redux-devtools-log-monitor": "^1.0.11",
-    "sass-loader": "^6.0.5",
-    "style-loader": "^0.17.0",
-    "url-loader": "^0.5.8",
-    "webpack": "^2.5.1",
-    "webpack-bundle-analyzer": "^2.6.0",
-    "webpack-dev-server": "^2.4.5"
+    "file-loader": "^1.1.5",
+    "html-webpack-plugin": "^2.30.1",
+    "jest": "^21.0.2",
+    "json-loader": "^0.5.7",
+    "npm-run-all": "^4.1.1",
+    "postcss-loader": "^2.0.7",
+    "react-hot-loader": "^3.0.0",
+    "redux-logger": "^3.0.6",
+    "redux-saga-tester": "1.0.370",
+    "redux-testkit": "^1.0.6",
+    "style-loader": "^0.19.0",
+    "url-loader": "^0.6.2",
+    "webpack": "^3.7.1",
+    "webpack-bundle-analyzer": "^2.9.0",
+    "webpack-dev-server": "^2.9.1"
   }
 }
