--- a/client/Dockerfile.build
+++ b/client/Dockerfile.build
@@ -32,7 +32,7 @@ RUN chown -R www:www /var/lib/nginx
 RUN chown -R www:www /build
 RUN mv /etc/nginx/nginx.conf /etc/nginx/nginx.conf.orig
 
-COPY ./nginx.conf /etc/nginx
+COPY ./config/nginx.conf /etc/nginx
 
 EXPOSE 80
 EXPOSE 443
