--- a/client/config/nginx.conf
+++ b/client/config/nginx.conf
@@ -1,4 +1,4 @@
-user                            www;
+user                            nginx;
 worker_processes                1;
 
 error_log                       /dev/stdout warn;
