--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -1,17 +1,11 @@
-FROM node:8.5-alpine
-
+# TODO: use multi-stage dockerfile also locally?
+FROM node:8.7-alpine
+ENV NODE_ENV development
 RUN apk add --update-cache build-base python git fontconfig
-
-WORKDIR /app
-
-ENV NODE_ENV dev
-
-COPY ./package.json /app/package.json
+WORKDIR /server
+COPY ./package.json /server/package.json
 RUN npm install nodemon -g
 RUN npm install --loglevel warn
-
-COPY . /app
-
+COPY . /server
 EXPOSE 3332
-
 CMD ["npm", "run", "start"]
