--- a/server/Dockerfile.build
+++ b/server/Dockerfile.build
@@ -1,29 +1,33 @@
-FROM node:8.5-alpine
+FROM node:8.7-alpine as builder
+ARG TARGET_ENV=prod
+ENV TARGET_ENV ${TARGET_ENV}
+ENV NODE_ENV development
+RUN apk add --update-cache build-base python git fontconfig
+WORKDIR /server
+COPY ./package.json /server/package.json
+RUN npm install nodemon -g
+RUN npm install --loglevel warn
+COPY . /server
+EXPOSE 3332
+RUN if [[ ${TARGET_ENV} != "local" ]]; then npm run build:prod; fi
+CMD ["npm", "run", "start"]
 
+FROM node:8.5-alpine
 ARG BUILD_VERSION
 ARG BUILD_IMAGE_TAG
-
 ENV BUILD_VERSION ${BUILD_VERSION}
 ENV BUILD_IMAGE_TAG ${BUILD_IMAGE_TAG}
-ENV NODE_ENV development
-
-RUN apk add --update-cache build-base python git fontconfig
-
-WORKDIR /app
-
-COPY ./package.json /app/package.json
-RUN npm install --loglevel warn
-
-COPY . /app
-
-RUN npm run build:prod
-
-# TODO Remove obsolete files
-# RUN rm -rf ./*/
-# RUN npm install --only=dev
-
-EXPOSE 3332
-
 ENV NODE_ENV production
-
+WORKDIR /build
+COPY --from=builder /build .
+WORKDIR /server
+RUN npm install nodemon -g
+COPY --from=builder /server .
+# Delete development libraries and create node user if it doesn't exist
+RUN npm prune --production && \
+    adduser -S -u 72376 -s /bin/false node || \
+    su node -s /bin/sh -c "node --version"
+USER node
+EXPOSE 3332
+# TODO dump-init or tiny as init system? Kubernetes uses --init?
 CMD ["npm", "run", "start:prod"]
