feat: Search example

--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -1,5 +1,6 @@
 # TODO: use multi-stage dockerfile also locally?
 FROM node:8.7-alpine
+ENV NODE_ENV development
 RUN apk add --update-cache build-base python git
 WORKDIR /client
 COPY ./package.json /client/package.json
