--- a/server/Dockerfile.build
+++ b/server/Dockerfile.build
@@ -1,3 +1,4 @@
+# Builder
 FROM node:8.7-alpine as builder
 ARG TARGET_ENV=prod
 ENV TARGET_ENV ${TARGET_ENV}
@@ -5,29 +6,33 @@ ENV NODE_ENV development
 RUN apk add --update-cache build-base python git fontconfig
 WORKDIR /server
 COPY ./package.json /server/package.json
-RUN npm install nodemon -g
+# TODO for local development: RUN npm install nodemon -g
 RUN npm install --loglevel warn
 COPY . /server
-EXPOSE 3332
+# TODO for local development: EXPOSE 3332
 RUN if [[ ${TARGET_ENV} != "local" ]]; then npm run build:prod; fi
-CMD ["npm", "run", "start"]
+# TODO for local development: CMD ["npm", "run", "start"]
 
-FROM node:8.5-alpine
+# Production runtime
+FROM node:8.7-alpine
 ARG BUILD_VERSION
-ARG BUILD_IMAGE_TAG
+LABEL version=${BUILD_VERSION} \
+      customer=customername \
+      project=server-template \
+      role=client
 ENV BUILD_VERSION ${BUILD_VERSION}
-ENV BUILD_IMAGE_TAG ${BUILD_IMAGE_TAG}
 ENV NODE_ENV production
 WORKDIR /build
 COPY --from=builder /build .
-WORKDIR /server
-RUN npm install nodemon -g
-COPY --from=builder /server .
+COPY --from=builder /server/package.json .
+COPY --from=builder /server/node_modules ./node_modules
 # Delete development libraries and create node user if it doesn't exist
 RUN npm prune --production && \
-    adduser -S -u 72376 -s /bin/false node || \
+    addgroup -S -g 74839 node || \
+    adduser -S -u 74276 -s /bin/false node || \
+    addgroup node node || \
     su node -s /bin/sh -c "node --version"
 USER node
 EXPOSE 3332
 # TODO dump-init or tiny as init system? Kubernetes uses --init?
-CMD ["npm", "run", "start:prod"]
+CMD ["node", "./index.production.js"]
