--- a/client/.babelrc
+++ b/client/.babelrc
@@ -1,9 +1,13 @@
 {
   "presets": [
-    ["es2015", {
-      "loose": true,
-      "modules": false
-    }],
+    [
+      "es2015",
+      {
+        "loose": true,
+        "modules": false
+      }
+    ],
+    "flow",
     "stage-2",
     "react"
   ],
