--- a/client/package.json
+++ b/client/package.json
@@ -7,14 +7,14 @@
   "scripts": {
     "test": "BABEL_ENV=test jest",
     "lint": "eslint . --ignore-path .eslintignore --quiet",
-    "start": "webpack-dev-server --config ./config/webpack.dev.js --public=localhost:8080",
+    "start":
+      "webpack-dev-server --config ./config/webpack.dev.js --public=localhost:8080",
     "build": "NODE_ENV=production webpack -p --config ./config/webpack.prod.js",
-    "analyze": "ANALYZE=true NODE_ENV=production webpack -p --config ./config/webpack.prod.js"
+    "analyze":
+      "ANALYZE=true NODE_ENV=production webpack -p --config ./config/webpack.prod.js"
   },
   "jest": {
-    "setupFiles": [
-      "./config/setup-jest.js"
-    ]
+    "setupFiles": ["./config/setup-jest.js"]
   },
   "repository": {
     "type": "git",
@@ -31,10 +31,12 @@
     "axios": "^0.16.2",
     "babel-polyfill": "^6.26.0",
     "color": "^2.0.0",
+    "history": "^4.7.2",
     "immutability-helper": "^2.4.0",
     "js-cookie": "^2.1.4",
+    "material-ui": "^1.0.0-beta.17",
+    "material-ui-icons": "^1.0.0-beta.17",
     "prop-types": "^15.6.0",
-    "qs": "^6.5.0",
     "raven-js": "^3.18.1",
     "react": "^16.0.0",
     "react-components-kit": "^4.1.0",
@@ -42,6 +44,7 @@
     "react-loadable": "^5.2.2",
     "react-redux": "^5.0.6",
     "react-router-dom": "^4.2.2",
+    "react-router-redux": "^5.0.0-alpha.6",
     "redux": "^3.7.2",
     "redux-actions": "^2.2.1",
     "redux-saga": "^0.15.6",
@@ -57,6 +60,7 @@
     "babel-plugin-react-transform": "^3.0.0",
     "babel-plugin-syntax-dynamic-import": "^6.18.0",
     "babel-preset-es2015": "^6.24.1",
+    "babel-preset-flow": "^6.23.0",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
     "css-loader": "^0.28.7",
@@ -77,6 +81,9 @@
     "npm-run-all": "^4.1.1",
     "postcss-loader": "^2.0.7",
     "react-hot-loader": "^3.0.0",
+    "redux-devtools": "^3.4.0",
+    "redux-devtools-dock-monitor": "^1.1.2",
+    "redux-devtools-log-monitor": "^1.3.0",
     "redux-logger": "^3.0.6",
     "redux-saga-tester": "1.0.370",
     "redux-testkit": "^1.0.6",
