--- a/package.json
+++ b/package.json
@@ -3,20 +3,34 @@
   "description": "",
   "private": false,
   "scripts": {
-    "lint": "echo TODO: lint code in package.json",
+    "analyze": "( cd client; npm run analyze )",
+    "lint": "npm run flow status; npm run lint:client; npm run lint:server",
+    "lint:admin": "eslint ./admin --ignore-path ./admin/.eslintignore --quiet",
+    "lint:client":
+      "eslint ./client --ignore-path ./client/.eslintignore --quiet",
+    "lint:server":
+      "eslint ./server --ignore-path ./server/.eslintignore --quiet",
+    "flow": "flow",
     "commit": "git-cz",
     "commitmsg": "validate-commit-msg",
     "precommit": "npm run lint",
     "prepush": "npm-run-all --parallel lint ci-test-unit",
-    "oper-users:local": "echo TODO: add local users to package.json",
-    "oper-users:dev": "echo Basic auth: #username/#password; echo TODO: add dev users to package.json",
-    "oper-users:test": "echo Basic auth: #username/#password; echo TODO: add test users to package.json",
-    "contacts-development": "cat PROJECT.md | sed -n -e '/^## Development.*$/,/^#.*$/{ /^## Development.*$/d; /^#.*$/d; p; }'",
-    "contacts-maintenance": "cat PROJECT.md | sed -n -e '/^## Maintenance.*$/,/^#.*$/{ /^## Maintenance.*$/d; /^#.*$/d; p; }'",
-    "ci-scan": "npm run lint; echo 'TODO sonar.sh start; run sonar scanner; sonar.sh stop ???'",
+    "users:local": "echo TODO: add local users to package.json",
+    "users:dev":
+      "echo Basic auth: #username/#password; echo TODO: add dev users to package.json",
+    "users:test":
+      "echo Basic auth: #username/#password; echo TODO: add test users to package.json",
+    "contacts-development":
+      "cat PROJECT.md | sed -n -e '/^## Development.*$/,/^#.*$/{ /^## Development.*$/d; /^#.*$/d; p; }'",
+    "contacts-maintenance":
+      "cat PROJECT.md | sed -n -e '/^## Maintenance.*$/,/^#.*$/{ /^## Maintenance.*$/d; /^#.*$/d; p; }'",
+    "ci-scan":
+      "npm run lint; echo 'TODO sonar.sh start; run sonar scanner; sonar.sh stop ???'",
     "ci-test-unit": "echo TODO: implement test:unit in package.json",
-    "ci-test-api:local": "echo TODO: implement test:api in package.json. Env=${taito_env} url=${taito_app_url} user=${test_api_user} password=${test_api_password}",
-    "ci-test-e2e:local": "echo TODO: implement test:e2e in package.json. Env=${taito_env} url=${taito_app_url} user=${test_e2e_user} password=${test_e2e_password}",
+    "ci-test-api:local":
+      "echo TODO: implement test:api in package.json. Env=${taito_env} url=${taito_app_url} user=${test_api_user} password=${test_api_password}",
+    "ci-test-e2e:local":
+      "echo TODO: implement test:e2e in package.json. Env=${taito_env} url=${taito_app_url} user=${test_e2e_user} password=${test_e2e_password}",
     "ci-docs": "echo TODO: generate docs in package.json",
     "ci-release-pre:prod": "semantic-release pre",
     "ci-release-post:prod": "semantic-release post"
@@ -42,9 +56,7 @@
       ],
       "scope": {
         "required": false,
-        "allowed": [
-          "*"
-        ],
+        "allowed": ["*"],
         "validate": false,
         "multiple": false
       },
@@ -71,7 +83,9 @@
     "url": "https://github.com/TaitoUnited/server-template/issues"
   },
   "keywords": [
+    "orig-template",
     "server-template",
+    "customername",
     "wepapp",
     "react",
     "node.js",
@@ -96,6 +110,7 @@
     "eslint-plugin-jsx-a11y": "4.0.0",
     "eslint-plugin-prettier": "^2.1.2",
     "eslint-plugin-react": "^7.0.0",
+    "flow-bin": "^0.57.3",
     "husky": "^0.14.3",
     "last-release-git": "0.0.3",
     "npm-run-all": "^4.0.2",
