--- a/server/.babelrc
+++ b/server/.babelrc
@@ -1,8 +1,8 @@
 {
-  "presets": ["es2015-node4", "stage-3"],
+  "presets": ["es2015-node4", "stage-3", "flow"],
   "plugins": [
     "transform-object-rest-spread",
     "syntax-async-functions",
-    "transform-runtime",
+    "transform-runtime"
   ]
 }
