--- a/server/package.json
+++ b/server/package.json
@@ -6,10 +6,13 @@
   "private": true,
   "scripts": {
     "start": "npm run start:dev",
-    "start:dev": "NODE_ENV=development nodemon -L ./index.js --ignore 'test/*.js' | bunyan -l debug",
-    "start:dev:trace": "NODE_ENV=development nodemon -L ./index.js --ignore 'test/*.js' | bunyan",
-    "start:prod": "NODE_ENV=production nodemon -L ./index.js",
-    "build:prod": "NODE_ENV=production babel -d ../build --ignore node_modules .",
+    "start:dev":
+      "NODE_ENV=development nodemon -L ./index.js --ignore 'test/*.js' | bunyan -l debug",
+    "start:dev:trace":
+      "NODE_ENV=development nodemon -L ./index.js --ignore 'test/*.js' | bunyan",
+    "start:prod": "NODE_ENV=production nodemon -L ./index.production.js",
+    "build:prod":
+      "NODE_ENV=production babel -d ../build --ignore node_modules .",
     "build:docs": "grunt --gruntfile ./Gruntfile swagger-docs --force"
   },
   "repository": {
@@ -19,10 +22,7 @@
   "bugs": {
     "url": "https://github.com/TaitoUnited/server-template/issues"
   },
-  "keywords": [
-    "koa2",
-    "leiko"
-  ],
+  "keywords": ["koa2", "leiko"],
   "author": "Taito United Oy <support@taitounited.fi>",
   "license": "",
   "homepage": "https://github.com/TaitoUnited/server-template#readme",
@@ -86,19 +86,26 @@
   "devDependencies": {
     "babel-cli": "^6.9.0",
     "babel-core": "^6.9.1",
-    "babel-eslint": "^6.0.4",
+    "babel-eslint": "^6.1.0",
     "babel-plugin-syntax-async-functions": "^6.8.0",
     "babel-plugin-transform-object-rest-spread": "^6.8.0",
     "babel-plugin-transform-regenerator": "^6.9.0",
     "babel-plugin-transform-runtime": "^6.9.0",
     "babel-preset-es2015-node4": "^2.1.0",
+    "babel-preset-flow": "^6.23.0",
     "babel-preset-stage-3": "^6.5.0",
     "babel-register": "^6.9.0",
     "babel-types": "^6.9.1",
     "chai": "^3.5.0",
     "chai-as-promised": "^5.3.0",
-    "eslint": "^1.10.3",
-    "eslint-config-airbnb": "^5.0.0",
+    "eslint": "3.19.0",
+    "eslint-config-airbnb": "14.1.0",
+    "eslint-config-airbnb-base": "11.1.2",
+    "eslint-config-prettier": "^2.3.0",
+    "eslint-loader": "^1.9.0",
+    "eslint-plugin-babel": "^4.1.1",
+    "eslint-plugin-import": "2.2.0",
+    "eslint-plugin-prettier": "^2.1.2",
     "grunt": "^1.0.1",
     "grunt-swagger-docs": "^0.0.4",
     "mocha": "^2.4.5",
