--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -66,7 +66,7 @@ server-template-server:
   environment:
     NODE_ENV: development
     ENV: dev # TODO remove?
-    DEBUG: 'true'
+    DEBUG: 'false'
     API_BINDADDR: 0.0.0.0
     API_PORT: 3332
     JWT_SECRET: secret
