--- a/client/package.json
+++ b/client/package.json
@@ -58,6 +58,7 @@
     "babel-jest": "^21.0.2",
     "babel-loader": "^7.1.2",
     "babel-plugin-react-transform": "^3.0.0",
+    "babel-plugin-styled-components": "^1.3.0",
     "babel-plugin-syntax-dynamic-import": "^6.18.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-flow": "^6.23.0",
