--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -94,6 +94,20 @@ steps:
 
 # STACK START
 
+- id: ci-build-admin
+  waitFor: ['ci-release-pre']
+  name: 'eu.gcr.io/gcloud-temp1/github-taitounited-taito-cli/cli:latest'
+  args: ['ci-build:$BRANCH_NAME', 'admin', '$COMMIT_SHA', 'eu.gcr.io/$PROJECT_ID/$REPO_NAME']
+  env:
+    - taito_mode=ci
+
+- id: ci-push-admin
+  waitFor: ['ci-build-admin']
+  name: 'eu.gcr.io/gcloud-temp1/github-taitounited-taito-cli/cli:latest'
+  args: ['ci-push:$BRANCH_NAME', 'admin', '$COMMIT_SHA', 'eu.gcr.io/$PROJECT_ID/$REPO_NAME']
+  env:
+    - taito_mode=ci
+
 - id: ci-build-client
   waitFor: ['ci-release-pre']
   name: 'eu.gcr.io/gcloud-temp1/github-taitounited-taito-cli/cli:latest'
@@ -127,14 +141,14 @@ steps:
 # Run tests in local environment
 
 # - id: start:local
-#   waitFor: ['ci-build-client', 'ci-build-server']
+#   waitFor: ['ci-build-admin', 'ci-build-client', 'ci-build-server']
 #   name: 'eu.gcr.io/gcloud-temp1/github-taitounited-taito-cli/cli:latest'
 #   args: ['start:local']
 #   env:
 #     - taito_mode=ci
 #
 # - id: ci-wait:local
-#   waitFor: ['ci-build-client', 'ci-build-server']
+#   waitFor: ['ci-build-admin', 'ci-build-client', 'ci-build-server']
 #   name: 'eu.gcr.io/gcloud-temp1/github-taitounited-taito-cli/cli:latest'
 #   args: ['ci-wait:local']
 #   env:
@@ -223,6 +237,7 @@ steps:
 
 timeout: 1200s
 images: [
+  'eu.gcr.io/$PROJECT_ID/$REPO_NAME/admin:$COMMIT_SHA',
   'eu.gcr.io/$PROJECT_ID/$REPO_NAME/client:$COMMIT_SHA',
   'eu.gcr.io/$PROJECT_ID/$REPO_NAME/server:$COMMIT_SHA'
 ]
