--- a/server/package.json
+++ b/server/package.json
@@ -45,6 +45,7 @@
     "jsonwebtoken": "^7.2.1",
     "kcors": "^2.0.0",
     "koa": "^2.0.0-alpha.3",
+    "koa-basic-auth": "^2.0.0",
     "koa-better-body": "^3.0.0",
     "koa-bunyan-logger": "^1.3.0",
     "koa-cache-control": "^1.0.0",
@@ -64,9 +65,9 @@
     "lru-cache": "^4.0.0",
     "moment": "^2.12.0",
     "moment-timezone": "^0.5.4",
-    "phantom": "^4.0.0",
     "pg-monitor": "^0.5.11",
     "pg-promise": "^5.3.2",
+    "phantom": "^4.0.0",
     "qs": "^6.1.0",
     "raven": "^2.0.2",
     "request": "^2.74.0",
