--- a/package.json
+++ b/package.json
@@ -4,11 +4,11 @@
   "private": true,
   "scripts": {
     "users:local":
-      "echo 'Shared passwords: See docker-compose.yaml'; echo 'TODO: add local users to package.json'",
+      "taito secrets | grep 'Showing\\|PASSWORD'; echo; echo 'TODO: add local users to package.json'",
     "users:dev":
-      "echo 'Basic auth: #username/#password'; echo 'Shared passwords: taito ci-secrets:dev'; 'echo TODO: add dev users to package.json'",
+      "taito secrets:dev | grep -A 1 'Showing\\|user.'; echo; echo 'TODO: add dev users to package.json'",
     "users:test":
-      "echo 'Basic auth: #username/#password'; echo 'Shared passwords: taito ci-secrets:test'; echo TODO: add test users to package.json",
+      "taito secrets:test | grep -A 1 'Showing\\|user.'; echo; echo 'TODO: add test users to package.json'",
     "ci-test-unit": "echo TODO: implement test:unit in package.json",
     "ci-test-api:local":
       "echo TODO: implement test:api in package.json. Env=${taito_env} url=${taito_app_url} user=${test_api_user} password=${test_api_password}",
