--- a/client/Dockerfile.build
+++ b/client/Dockerfile.build
@@ -7,7 +7,7 @@ ENV BUILD_VERSION ${BUILD_VERSION}
 ENV NODE_ENV development
 ENV API_ROOT ''
 ENV API_URL /api
-ENV APP_SENTRY_PUBLIC_DSN #sentryDSN
+ENV APP_SENTRY_PUBLIC_DSN #sentryPublicDSN
 RUN apk add --update-cache build-base python git
 WORKDIR /client
 COPY ./package.json /client/package.json
