--- a/client/config/nginx.conf
+++ b/client/config/nginx.conf
@@ -17,7 +17,13 @@ http {
     server {
         listen 3333;
         listen [::]:3333;
-        server_name             local-stackdriver-agent.stackdriver.com;
+        server_name             localhost;
+
+        # EXAMPLE: Enable basic auth on client so that credentials will be
+        # asked from user before any api calls are made
+        # TODO .htpasswd should come from kubernetes secrets
+        # auth_basic              “user”;
+        # auth_basic_user_file    /etc/nginx/.htpasswd;
 
         # Serve static files
         root                    /build;
