--- a/docker-nginx.conf
+++ b/docker-nginx.conf
@@ -63,6 +63,11 @@ http {
             proxy_pass http://server-template-client:3333;
             proxy_http_version 1.1;
 
+            # Example: Enable basic auth on client so that credentials will
+            # be asked from user before any api calls are made
+            # auth_basic              “user”;
+            # auth_basic_user_file    /etc/nginx/.htpasswd;
+
             proxy_redirect off;
 
             # Headers
